added collecting of download volume statistics data per news server; in web-interface the data is shown as chart in "Statistics and Status" dialog; new RPC-method "servervolumes" returns the collected data
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@973 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -1,7 +1,7 @@
 /*!
  * This file is part of nzbget
  *
- * Copyright (C) 2012-2013 Andrey Prygunkov <hugbug@users.sourceforge.net>
+ * Copyright (C) 2012-2014 Andrey Prygunkov <hugbug@users.sourceforge.net>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -771,7 +771,7 @@ form {
 }
 
 .modal.no-footer .modal-body {
-	max-height: 400px;
+	max-height: 420px;
 }
 
 .modal-footer .btn-primary {
@@ -993,9 +993,6 @@ table.table-hidecheck tbody > tr > td:first-child {
 }
 /* END: Progress bars */
 
-input[disabled],
-select[disabled],
-textarea[disabled],
 input[readonly],
 select[readonly],
 textarea[readonly],
@@ -1069,8 +1066,9 @@ textarea[readonly],
 }
 
 .form-horizontal .help-block	{
-	margin-top: 6px;
-	line-height: 14px;
+	margin-top: 4px;
+	margin-bottom: -2px;
+	line-height: 18px;
 }
 
 .form-horizontal .help-block-uneditable {
@@ -1124,6 +1122,11 @@ textarea[readonly],
   margin-left:-240px;
 }
 
+.modal-large {
+  width: 700px;
+  margin-left:-350px;
+}
+
 .modal-padded-small .modal-body {
   padding-left: 25px;
   padding-right: 25px;
@@ -1132,6 +1135,16 @@ textarea[readonly],
 .modal-padded .modal-body {
   padding-left: 40px;
   padding-right: 40px;
+}
+
+.modal-tab-padded {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.modal-tab-padded-small {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .dragover, .dragover .table-striped tbody tr:nth-child(odd) td, .dragover .table-striped tbody tr:nth-child(odd) th {
@@ -1252,6 +1265,44 @@ ul.help > li {
 
 #StatisticsTab table {
 	width: 350px;
+}
+
+#StatDialog_VolumesBlock {
+	text-align: center;
+}
+
+#StatDialog_ChartBlock {
+	height: 300px;
+	width: 100%;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+#StatDialog_Chart {
+	height: 100%;
+	*width: 670px;
+	width: 100%;
+}
+
+#StatDialog_Tooltip {
+	float: right;
+	margin-top: -3px;
+	margin-bottom: -6px;
+	padding-right: 15px;
+	font-style: italic;
+}
+
+.phone #StatDialog_Tooltip {
+	margin-top: 3px;
+	margin-bottom: 3px;
+}
+
+#StatDialog_TooltipSize {
+	font-weight: bold;
+}
+
+#StatDialog_TooltipSum {
+	font-weight: bold;
 }
 
 .confirm-menu {
@@ -2200,6 +2251,12 @@ body.phone,
   padding-right: 15px;
 }
 
+.phone .modal-tab-padded,
+.phone .modal-tab-padded-small {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .phone .modal-max .modal-body {
 	position: static;
 }
@@ -2248,6 +2305,20 @@ body.phone,
 }
 
 /* MEDIA SMALL SCREENS */
+@media (max-width: 700px) {
+	#ConfigContent [class*="span"] {
+		display: block;
+		float: none;
+		width: auto;
+		margin-left: 0;
+	}
+
+	.modal-large {
+	  width: 600px;
+	  margin-left:-300px;
+	}
+}
+
 @media (max-width: 568px) {
 
 	input[type="checkbox"],
@@ -2304,7 +2375,8 @@ body.phone,
 		width: 95%;
 	}
 
-	.modal-body	{
+	.modal-body,
+	.modal.no-footer .modal-body {
 		max-height: none;
 	}
 
@@ -2319,15 +2391,6 @@ body.phone,
 		left: 20px;
 		width: auto;
 		margin: -10% 0 0;
-	}
-}
-
-@media (max-width: 700px) {
-	#ConfigContent [class*="span"] {
-		display: block;
-		float: none;
-		width: auto;
-		margin-left: 0;
 	}
 }
 
