per-server/per-nzb article completion statistics are now available for active downloads in details dialog (not only for history); the info on that page is constantly updated as long as the page is active (unless refresh is disabled); download age info removed from details dialog to save place (it is shown in the download list anyway) ;if backup news-servers start to be used for nzb-file a badge appears in the download list showing the percentage of articles downloaded from backup servers; click on the badge opens download details dialog directly on the completion page
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@983 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -665,6 +665,10 @@ ul.dropdown-menu > li > a > i {
 	color: #000000;
 }
 
+.table a.badge-link:hover {
+	text-decoration: none;
+}
+
 table.datatable > tbody > tr > td {
 	word-wrap: break-word;
 }
@@ -1274,12 +1278,16 @@ ul.help > li {
 	text-align: left;
 }
 
-.data-statistics-full {
-	width: 364px;
+.data-statistics {
+	width: 260px;
 }
 
-.data-statistics {
-	width: 290px;
+.data-statistics-wide {
+	width: 300px;
+}
+
+.data-statistics-full {
+	width: 364px;
 }
 
 .modal-center {
@@ -2291,7 +2299,9 @@ body.phone,
 	padding-right: 0;
 }
 
-.phone .data-statistics {
+.phone .data-statistics,
+.phone .data-statistics-wide,
+.phone .data-statistics-full {
 	width: 100%;
 }
 
