--- a/webui/style.css
+++ b/webui/style.css
@@ -1116,6 +1116,11 @@ textarea[readonly],
           box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.025);
 }
 
+.input-medium.uneditable-input,
+.uneditable-mulitline-input {
+  margin-bottom: -4px;
+}
+
 .modal-mini {
   width: 420px;
   margin-left:-210px;
