each nzb now has its own individual log, where messages printed during download or post-processing are saved; the messages can be retrieved later at any time; new button "Log" in the history details dialog; button "Log" in the download details dialog is now active during download too (not only during post-processing); the log contains all nzb-related messages except detail-messages and errors printed during retrieving of articles (they would produce way too many messages and are not that useful anyway); new option "NzbLog" to deactivate per-nzb logging if necessary; per-nzb logs are saved in the queue-directory (option "QueueDir"); new RPC-method "loadlog" returns the previously saved messages for a given nzb-file; new field "MessageCount" is returned by RPC-methods "listgroups" and "history" and indicates if there are any messages saved for the item; parameter "NumberOfLogEntries" of RPC-method "listgroups" and the field "Log" returned by the method are now deprecated, use method "loadlag" instead; field "PostInfoText" returned by RPC-method "listgroups" is now automatically filled with the latest message printed by a pp-script eliminating the need to access deprecated field "Log"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1221 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -783,9 +783,27 @@ form {
 }
 
 #DownloadsEdit_FileTable_filter,
-#DownloadsEdit_LogTable_filter,
+#DownloadsEdit_LogTable_filter
+#HistoryEdit_LogTable_filter,
 #FeedDialog_ItemTable_filter {
 	width: 180px;
+}
+
+#DownloadsLogRecordsPerPageBlock,
+#HistoryLogRecordsPerPageBlock {
+	margin-bottom: 12px;
+}
+
+#DownloadsEdit_LogTable_filterBlock,
+#HistoryEdit_LogTable_filterBlock {
+	float: left;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 12px;
+}
+
+.phone .modal-toolbox {
+	margin-bottom: 20px;
 }
 
 .loading-block {
