option sets (such as news-servers, categories, etc.) can now be reordered using news buttons "move up" and "move down"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1230 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -1635,7 +1635,8 @@ div.control-group.last-group {
 	color: #005580;
 }
 
-.config-previewfeed {
+.config-previewfeed,
+.config-move {
 	margin-left: 15px;
 }
 
