1) added button "Test Connection" to make a news server connection test from web-interface; 2) improved timeout handling when connecting to news servers which have multiple addresses; 3) improved error handling when communicating with secure servers (do not trying to send quit-command if connection could not be established or was interrupted; this avoids unnecessary timeout)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1250 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/style.css
+++ b/webui/style.css
@@ -1635,9 +1635,8 @@ div.control-group.last-group {
 	color: #005580;
 }
 
-.config-previewfeed,
-.config-move {
-	margin-left: 15px;
+div.multiset-toolbar button {
+	margin-right: 15px;
 }
 
 #ScriptListDialog_ScriptTable td:nth-child(2) {
